--- a/package.json
+++ b/package.json
@@ -42,6 +42,13 @@
     "postcss-preset-env": "^7.8.3",
     "posthtml-include": "^1.7.4",
     "rimraf": "^3.0.2",
-    "sharp": "0.31.1"
+    "sharp": "0.31.1",
+    "stylelint": "^15.6.1",
+    "stylelint-config-standard-scss": "^9.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.0-alpha3",
+    "bootstrap-icons": "^1.10.5",
+    "sass": "^1.62.1"
   }
 }
